# ComfyUI-Lenient-Switch

./: CLAUDE.md  README.md  __init__.py  lenient_switch_node.py  loose_switch_node.py  prompt_tabs_node.py  pyproject.toml
web/: simple_selector_group_bypass.js
