[project]
name = "lenient-switch"
version = "0.0.1"
description = "A switcher that allows specify conditions and inputs/outputs individually"
readme = "README.md"
license = {text = "MIT license"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
]

[project.urls]
Repository = "https://github.com/id-fa/ComfyUI-Lenient-Switch"

[tool.comfy]
PublisherId = "id-fa"
DisplayName = "Lenient Switch"
Icon = ""
Tags = []
Repository = "https://github.com/id-fa/ComfyUI-Lenient-Switch"
includes = []
