[project]
name = "lenient-switch"
version = "0.0.8"
description = "A switcher that allows specify conditions and inputs/outputs individually"
readme = "README.md"
license = {text = "MIT license"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
]

[project.urls]
Repository = "https://github.com/id-fa/ComfyUI-Lenient-Switch"

[tool.comfy]
PublisherId = "id-fa"
DisplayName = "Lenient Switch"
Icon = "https://raw.githubusercontent.com/id-fa/ComfyUI-Lenient-Switch/refs/heads/main/docs/lenient_switch_icon.png"
Banner = "https://raw.githubusercontent.com/id-fa/ComfyUI-Lenient-Switch/refs/heads/main/docs/lenient_switch_banner.png"
Tags = []
Repository = "https://github.com/id-fa/ComfyUI-Lenient-Switch"
includes = []
